<resources>
    <string name="app_name">Shoplistify</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_list">Create new list</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_main">Shoplistify</string>
    <string name="list_name">List name</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_list_title">Add new list</string>
    <string name="ok">OK</string>
    <string name="main_list_empty_info">To add a new list, press the \"+\" button</string>
    <string name="list_empty_info">To add a new list item, press the \"+\" button</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete Item</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="edit_list_item_title">Edit item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="undo">Undo</string>
    <string name="item_restored">Item Restored</string>
    <string name="action_delete_all">Delete All</string>
    <string name="clear_list">Clear List</string>
    <string name="clear_list_message">Are You sure You want to clear the whole list?</string>
    <string name="edit_list_title">Edit List</string>
    <string name="sign_in">Sign In</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="drawer_cat_groceries">Groceries</string>
    <string name="drawer_cat_electronics">Electronics</string>
    <string name="drawer_cat_other">Other</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="settings_sync">Enable / Disable Sync</string>
    <string name="settings_text_size">Set text size</string>
    <string name="delete_button">delete button</string>
    <string name="category">Category</string>
    <string name="loading">Loading</string>
    <string name="drawer_account">Sign In / Out</string>
</resources>
